--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "astro-icon": "^1.1.5",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "lucide-astro": "^0.554.0",
     "unpic": "^4.1.3"
   },
   "devDependencies": {
