--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,8 +27,8 @@ jobs:
           # node-version: 24 # The specific version of Node that should be used to build your site. Defaults to 22. (optional)
           # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
           # build-cmd: pnpm run build # The command to run to build your site. Runs the package build script/task by default. (optional)
-        env:
-          PUBLIC_GOOGLE_MAPS_KEY: ${{ secrets.PUBLIC_GOOGLE_MAPS_KEY }}
+        # env:
+        #   PUBLIC_GOOGLE_MAPS_KEY: ${{ secrets.PUBLIC_GOOGLE_MAPS_KEY }}
 
   deploy:
     needs: build
