--- a/src/config.yaml
+++ b/src/config.yaml
@@ -34,7 +34,7 @@ i18n:
 analytics:
   vendors:
     googleAnalytics:
-      id: null # or "G-XXXXXXXXXX"
+      id: 'G-Y8983XJSGX'
 
 ui:
   theme: 'light:only' # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
